add a literal/regex drop-down to the search box
…and select the correct one based on the URL. Tested with/without service worker
and with/without JavaScript.

--- a/cmd/dcs-web/templates/error.html
+++ b/cmd/dcs-web/templates/error.html
@@ -68,12 +68,7 @@ pre {
   <a href="./" title="Debian Home"><img src="/Pics/openlogo-50.svg" alt="Debian" width="50" height="61"></a>
   </div> <!-- end logo -->
   <p class="section"><a href="/">Code Search</a></p>
-  <div id="searchbox">
-<form action="/search" method="get">
-<input type="text" name="q" value="{{.q}}">
-<input type="submit" value="Search">
-</form>
-  </div>
+{{ template "searchbox.html" . }}
  </div> <!-- end upperheader -->
 <!--UdmComment-->
 <div id="navbar">
