--- a/cmd/dcs-web/templates/show.html
+++ b/cmd/dcs-web/templates/show.html
@@ -23,8 +23,8 @@ pre, code {
     width: {{.lnrwidth}}em;
 }
 </style>
-<link rel="stylesheet" href="//yandex.st/highlightjs/7.0/styles/default.min.css">
-<script src="//yandex.st/highlightjs/7.0/highlight.min.js"></script>
+<link rel="stylesheet" href="/highlightjs-default.min.css">
+<script src="/highlightjs.min.js"></script>
 </head>
 <body>
 
