Add <link> for OpenSearch autodiscovery
Although opensearch.xml was already defined, browsers wouldn't find it
because it wasn't linked from the HTML pages as described in
[Autodiscovery in HTML/XHTML].  This commit adds the necessary <link>
elements to the search and results pages.

[Autodiscovery in HTML/XHTML]: https://github.com/dewitt/opensearch/blob/c9ed38a/opensearch-1-1-draft-6.md#autodiscovery-in-htmlxhtml

Signed-off-by: Kevin Locke <kevin@kevinlocke.name>

--- a/cmd/dcs-web/templates/index.html
+++ b/cmd/dcs-web/templates/index.html
@@ -9,6 +9,10 @@ vim:ts=4:sw=4:expandtab
 </style>
 <link rel="preload" href="/non-critical.min.css" as="style" onload="this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="/non-critical.min.css"></noscript>
+<link rel="search"
+  type="application/opensearchdescription+xml"
+  href="/opensearch.xml"
+  title="Debian Code Search">
 </head>
 <body>
 
