--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -60,6 +60,10 @@ pre {
 </style>
 <link rel="preload" href="/non-critical.min.css" as="style" onload="this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="/non-critical.min.css"></noscript>
+<link rel="search"
+  type="application/opensearchdescription+xml"
+  href="/opensearch.xml"
+  title="Debian Code Search">
 </head>
 <body>
 
