--- a/cmd/dcs-web/templates/index.html
+++ b/cmd/dcs-web/templates/index.html
@@ -44,7 +44,7 @@ vim:ts=4:sw=4:expandtab
 <input type="text" name="q" autofocus="autofocus">
 <select name="literal">
 <option value="1" selected>literal</option>
-<option value="0">regex</opiton>
+<option value="0">regex</option>
 </select>
 <input type="submit" value="Search">
 </form>
