Fix query parameter concatenation when JavaScript is disabled
fixes https://github.com/Debian/dcs/issues/116

--- a/cmd/dcs-web/templates/perpackage-results.html
+++ b/cmd/dcs-web/templates/perpackage-results.html
@@ -92,7 +92,7 @@ pre {
 <p>
 <strong>Filter by package:</strong>
 {{range $index, $package := .packages}}
-<a href="{{$.filterurl}}?q={{$.q}}+package:{{$package}}">{{$package}}</a>,
+<a href="{{$.filterurl}}&q={{$.q}}+package:{{$package}}">{{$package}}</a>,
 {{end}}
 </p>
 
