--- a/cmd/dcs-web/templates/footer.html
+++ b/cmd/dcs-web/templates/footer.html
@@ -3,7 +3,7 @@
 <hr>
 <div id="fineprint">
 <p>© 2012 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
-<p>dcs-web {{.version}}, see <a href="https://github.com/Debian/dcs/">github.com/Debian/dcs</a></p>
+<p>dcs-web <a href="https://github.com/Debian/dcs/commit/{{.version.Revision}}">{{.version}}</a></p>
 {{ if eq .host "codesearch.debian.net" }}
 <p>Did you know? You can access DCS via Cloudflare at <a href="https://dcs.zekjur.net">https://dcs.zekjur.net</a>.</p>
 {{ end }}
