--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -95,7 +95,7 @@ pre {
 <p>
 <strong>Filter by package:</strong>
 {{range $index, $package := .packages}}
-<a href="{{$.filterurl}}&q={{$.q}}+package:{{$package}}">{{$package}}</a>,
+<a href="{{ appendToQuery $.filterurl (printf " package:%s" $package ) }}">{{$package}}</a>,
 {{end}}
 </p>
 
